# ProyectoSoftcomputing

./: CMakeLists.txt  README.md
src/: Config.hpp  ControlNetwork.cpp  ControlNetwork.hpp  Drone.hpp  FPType.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  PhysicsSim.cpp  PhysicsSim.hpp  TrainingSim.cpp  TrainingSim.hpp  Util.hpp  Vec2.cpp  Vec2.hpp
src/olc/: olcPGE.hpp
src/threadpool/: LLThread.hpp  ThreadPool.cpp  ThreadPool.hpp
